--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,10 @@
+<link
+  rel="stylesheet"
+  href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+  crossorigin="anonymous"
+/>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
